<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/new_vocabulary_name_label"
        android:text="@string/new_vocabulary_name_label"
        android:gravity="center_vertical"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/new_vocabulary_name"
        android:hint="@string/new_vocabulary_name_hint"
        android:layout_toEndOf="@id/new_vocabulary_name_label"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/new_vocabulary_count_label"
        android:text="@string/new_vocabulary_count_label"
        android:layout_below="@id/new_vocabulary_name_label"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/new_vocabulary_count"
        android:layout_below="@id/new_vocabulary_name"
        android:layout_toEndOf="@id/new_vocabulary_name_label"
        />
    <!-- TODO: only progress bar should be seen while loading -->
    <ProgressBar
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:id="@+id/new_vocabulary_load_progress"
        android:layout_below="@id/new_vocabulary_count"
        />

</RelativeLayout>