<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.bonzimybuddy.fenciqi.OrganizeDocumentsActivity"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/main_background">

        <android.support.v7.widget.Toolbar
            android:id="@+id/main_toolbar"
            app:title="@string/organize_documents_title"
            app:titleTextColor="@color/whiteText"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:padding="20dp">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:id="@+id/organize_article_card">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">
                    <TextView
                        android:layout_height="40dp"
                        android:layout_width="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:id="@+id/articles_category"
                        android:textSize="30sp"
                        android:text="@string/articles_card_title"/>
                    <TextView
                        android:layout_height="40dp"
                        android:layout_width="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:textSize="30sp"
                        android:text="0篇"/>
                    <TextView
                        android:layout_height="40dp"
                        android:layout_width="match_parent"
                        android:layout_below="@id/articles_category"
                        android:gravity="center_vertical"
                        android:text="@string/articles_card_desc"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:id="@+id/organize_vocabulary_card">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">
                    <TextView
                        android:layout_height="40dp"
                        android:layout_width="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:id="@+id/vocabulary_category"
                        android:textSize="30sp"
                        android:text="@string/wordlists_card_title"/>
                    <TextView
                        android:layout_height="40dp"
                        android:layout_width="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:textSize="30sp"
                        android:id="@+id/vocabulary_entries_total"
                        android:text="0詞"/>
                    <TextView
                        android:layout_height="40dp"
                        android:layout_width="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_toLeftOf="@id/vocabulary_entries_total"
                        android:layout_marginRight="5dp"
                        android:textSize="30sp"
                        android:id="@+id/vocabularies_total"
                        android:text="0冊"/>
                    <TextView
                        android:layout_height="40dp"
                        android:layout_width="match_parent"
                        android:layout_below="@id/vocabulary_category"
                        android:gravity="center_vertical"
                        android:text="@string/wordlists_card_desc"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:id="@+id/organize_dictionary_card">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">
                    <TextView
                        android:layout_height="40dp"
                        android:layout_width="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:id="@+id/dictionary_category"
                        android:textSize="30sp"
                        android:text="@string/dictionaries_card_title"/>
                    <TextView
                        android:layout_height="40dp"
                        android:layout_width="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:textSize="30sp"
                        android:id="@+id/dictionary_entries_total"
                        android:text="0詞"/>
                    <TextView
                        android:layout_height="40dp"
                        android:layout_width="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_toLeftOf="@id/dictionary_entries_total"
                        android:layout_marginRight="5dp"
                        android:textSize="30sp"
                        android:id="@+id/dictionaries_total"
                        android:text="0冊"/>
                    <TextView
                        android:layout_height="40dp"
                        android:layout_width="match_parent"
                        android:layout_below="@id/dictionary_category"
                        android:gravity="center_vertical"
                        android:text="@string/dictionaries_card_desc"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true" />
</android.support.v4.widget.DrawerLayout>